Flat UI Assignment Add

--- a/index.html
+++ b/index.html
@@ -39,7 +39,11 @@
 		<li><a href="./FlexBox Froggy Assgnment/FlexBox Froggy Assigement.docx" target="_blank"> FlexBox Froggy Assignment </a></li>
 	</ul>
 
+	<p><h1><center> 5th ASSIGNMENT </center> </h1></p>
 
+	<ul>
+		<li><a href="./Flate UI Colors/index.html" target="_blank"> Flate UI Colors </a></li>
+	</ul>
 
 
 
