--- a/index.html
+++ b/index.html
@@ -45,6 +45,12 @@
 		<li><a href="./Flate UI Colors/index.html" target="_blank"> Flate UI Colors </a></li>
 	</ul>
 
+	<p><h1><center> 6th ASSIGNMENT </center> </h1></p>
+
+	<ul>
+		<li><a href="./Salt-n-Pepper/Salt'n Pepper Clone.html" target="_blank"> Salt-n-Pepper </a></li>
+	</ul>
+
 
 
 	</body>
